Version ??? (???):
	* mp3_support option added to permit MP3 support to be disabled.
	Handy for testing firmwares that lack MP3 support.

Version 1.0 (June 19, 2003):
	* Ogg Vorbis support added.  (Turned off by default)  Requires 
	vorbis and ogg python modules by Andrew Chatham.  
	THIS DOES NOT MAKE YOUR NEUROS PLAY OGG VORBIS FILES.  
	You still need a Vorbis-capable firmware, which has not been 
	released yet.
	* Minor documentation fixes and manpage updates.  Added
	explanation of how to format the Neuros to the troubleshooting
	guide.
	* Tips for positron developers added to HACKING.
	* Fixed bug that prevented ID3v2 tags from taking precedence over
	v1 tags when both were present.
	* Fixed bug preventing databases from being sorted during sync
	rebuild.

Version 1.0b2 (May 28, 2003):
	* Dual licensed MP3Info.py under both Xiph.org BSD and GPL
	* User's Guide and Developer's Guide added
	* Fixed crashing while using "positron del"
	* Albums, Artists, and Genres are now sorted on the Neuros
	* Fixed a problem that caused 35 second MP3s to crash positron
	* Improved MP3 detection
	* Files with illegal characters in the filename or in the tags are
	  handled now.  The characters are changed (usually to underscores)
	  to prevent Neuros lockups.
	* Files are now correctly uploaded to both the Flash and the HD
	  Neuros configurations.  (Before only the HD would work.)

Version 1.0b1 (May 22, 2003):
	* Initial public release
